--- a/ui.properties
+++ b/ui.properties
@@ -1,4 +1,4 @@
 server.port=${PORT:8080}
 management.security.enabled=false
-message=rassyai
+message=hey yo
 management.endpoints.web.exposure.include=*
