--- a/recommendations.properties
+++ b/recommendations.properties
@@ -1,3 +1,3 @@
 server.port=${PORT:3333}
-management.endpoints.web.exposure.include=*
+management.endpoints.web.exposure.include=hystrix.stream
 management.security.enabled=false
